# Grab_Cut

./: CMakeCache.txt  CMakeLists.txt  Grab_Cut  Grab_Cut.cbp  Makefile  README.md  cmake_install.cmake
include/: BorderMatting.h  GCApplication.h  GMM.h  GUI.h  GrabCut.h  KmeansSample.h  block.h
src/: BorderMatting.cpp  GCApplication.cpp  GMM.cpp  GUI.cpp  GrabCut.cpp  KmeansSample.cpp  graph.cpp  instances.inc  main.cpp  maxflow.cpp
